# src/routes/userRoutes.js
@@ -4,7 +4,8 @@ import {
   login, 
   getAllUsers, 
   getUserById,
-  searchUsers
+  searchUsers,
+  refreshToken
   // ... 其他控制器方法
 } from '../controllers/userController.js';
 import { auth } from '../middleware/auth.js';
@@ -15,7 +16,7 @@ const swaggerOptions = {
   definition: {
     openapi: '3.0.0',
     info: {
-      title: '您的 API 文档',
+      title: 'API 文档',
       version: '1.0.0',
     },
   },
@@ -26,6 +27,7 @@ const swaggerOptions = {
 // 公开路由
 router.post('/register', register);
 router.post('/login', login);
+router.post('/refresh-token', refreshToken); // 刷新 token 的路由
 
 // 需要认证的路由
 router.get('/all', auth, getAllUsers); // 获取所有用户
